jira-166 : Made pagination to be greyed out when there are less than 10 records in the searchResults and fixed the alignment issues.

--- a/src/main/resources/static/css/searchRecords.css
+++ b/src/main/resources/static/css/searchRecords.css
@@ -11,3 +11,6 @@ table.tablesorter thead tr .tablesorter-headerAsc {
 table.tablesorter thead tr .tablesorter-headerDesc {
     background-image: url(../images/metro-white-desc.png);
 }
+table.tableWithoutBorder tbody tr td{
+    border-top: 0;
+}
